fixed invisible box overlapping ProductCards

--- a/src/styles/buttons/MainButton.css
+++ b/src/styles/buttons/MainButton.css
@@ -13,6 +13,7 @@
   margin-right: 3em !important;
   width: 250px;
   height: 38px;
+  pointer-events: all;
 }
 
 /* Responsive Web Design */
