--- a/src/styles/main-section/CategoriesDropDown.css
+++ b/src/styles/main-section/CategoriesDropDown.css
@@ -16,6 +16,7 @@
   background-color: rgb(9, 114, 184);
   cursor: pointer;
   z-index: 2;
+  pointer-events: all;
 }
 
 .categories-dropdown-container {
@@ -23,7 +24,7 @@
   background-color: rgb(96, 160, 202);
   transform: translateY(-100%);
   transition: transform 0.5s ease-in-out;
-  
+  pointer-events: all;
 }
 
 .categories-dropdown-container.visible {
